fix double encoded op credentials file

--- a/.github/taskfiles/cluster.tasks.yaml
+++ b/.github/taskfiles/cluster.tasks.yaml
@@ -59,7 +59,7 @@ tasks:
       SECRET_TEMPLATE: "{{.ROOT_DIR}}/kubernetes/bootstrap/config/secret.tmpl.yaml"
       SOPS_DIR:
         sh: echo {{.SOPS_FILE}} | xargs dirname
-      SED_COMMAND: 's/\=/: \x27/g;s/$/\x27/' # Command to surround with single quotes 's/\=/: \x27/g;s/$/\x27/'
+      SED_COMMAND: 's/\=/: \x27/;s/$/\x27/' # Command to surround with single quotes 's/\=/: \x27/g;s/$/\x27/'
     cmds:
       - cat {{.SOPS_FILE}} > {{.SOPS_DIR}}/sops.unencrypted.yaml
       - op inject -i {{.SOPS_DIR}}/sops.unencrypted.yaml -o {{.SOPS_DIR}}/vars.unencrypted.yaml
